bug fixing hearer is crossed to the top of the site the main page has an overflow:scroll; installed removed unnecessary output in the find_posts function

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 #pageMain {
     grid-area: pageMain;
-    overflow: auto;
+    overflow: scroll;
 }
 
 
